# rosclaw-swarm

./: .gitignore  README.md  agents_example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: rosclaw_v1.0见解一.md  rosclaw_哲学思辨.md  swarm_思考一.md  swarm_思考三.md  swarm_思考二.md
docs/release/v1.0/audits/: audit-swarm.md
examples/: demo_simulation.py
rosclaw_swarm/: __init__.py  cli.py  dds_bridge.py  dds_group.py  discovery.py  force_state.py  llm_planner.py  manager.py  mcp_tools.py  models.py  planner.py  reflex.py  registry.py  role_assigner.py  safety_zone.py  scheduler.py  server.py  simulation.py  tf_sync.py  visualizer.py
tests/: test_integration.py  test_llm_planner.py  test_models.py  test_planner.py  test_registry.py  test_scheduler.py  test_simulation.py  test_sprint11.py  test_visualizer.py
