[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosclaw-swarm"
version = "0.1.0"
description = "ROSClaw Swarm Coordination Runtime — Collaboration Grounding for Physical Intelligence"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]
mcp = ["fastmcp>=0.4.0"]
ros2 = ["rclpy>=3.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rosclaw_swarm*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
